--- a/有效的括号.md
+++ b/有效的括号.md
@@ -1,4 +1,5 @@
 ```c++
+//方法一
 class Solution {
 public:
     bool isValid(string s) {
@@ -30,5 +31,38 @@ public:
         else
             return false;
     }
+};
+```
+
+```c++
+//方法二
+class Solution {
+public:
+bool isValid(string s) {
+    int len=s.length();
+    stack<char> sta;
+    map<char,char> m={{'}','{'},{')','('},{']','['}};
+    for(int i=0;i<len;i++){
+        if(m.count(s[i])==0){
+            sta.push(s[i]);
+        }else {
+            if(!sta.empty()){
+                char temp=sta.top();
+                if(m[s[i]]==temp){
+                    sta.pop();
+                }else {
+                    return false;
+                }
+            }else {
+                return false;
+            }
+        }
+    }
+    if(sta.empty()){
+        return true;
+    }else {
+        return false;
+    }
+}
 };
 ```
