--- a/53.最大子序和.md
+++ b/53.最大子序和.md
@@ -19,3 +19,26 @@ int maxSubArray(vector<int>& nums) {
 内存消耗 :9.3 MB, 在所有 C++ 提交中击败了78.65%的用户
 ```
 暴力方法，还在想简单的方法，这时间复杂度太高了
+```c++
+//改进
+class Solution {
+public:
+int maxSubArray(vector<int>& nums) {
+    int max=nums[0],sum=0;
+    for(int i=0;i<nums.size();i++){
+        if(sum>0){
+            //如果 sum和 现在是负数 对后面的序列增长没有帮助  所以以新的nums元素为新的起点
+            sum+=nums[i];
+        }else {
+            sum=nums[i];
+        }
+        max=max>sum?max:sum;
+    }
+    return max;
+}
+};
+```
+```
+执行用时 :8 ms, 在所有 C++ 提交中击败了88.30%的用户
+内存消耗 :9.2 MB, 在所有 C++ 提交中击败了80.76%的用户
+```
