--- a/175.合并两表.md
+++ b/175.合并两表.md
@@ -1,10 +1,21 @@
 ```sql
-/*oracle*/
+/*mysql*/
 select p.FirstName,p.LastName,a.City,a.State
 from Person p left join Address a on a.PersonId=p.PersonId;
 ```
 
 ```
 Runtime: 210 ms, faster than 86.25% of MySQL online submissions for Combine Two Tables.
+Memory Usage: N/A
+```
+
+
+```sql
+/*oracle*/
+select FirstName,LastName,City,State
+from Person left join Address  on Address.PersonId=Person.PersonId;
+```
+```
+Runtime: 694 ms, faster than 62.94% of Oracle online submissions for Combine Two Tables.
 Memory Usage: N/A
 ```
